# pinq

./: .gitignore  Cargo.toml  MANIFEST.in  README.md  pinq.pyi  pyproject.toml
docs/: BUILD.md  PROJECT_STRUCTURE.md  builders.md  classes.md  enums.md  errors.md  examples.md  functions.md  overview.md
examples/: example.py
scripts/: build.py
src/: lib.rs
