[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "pinq"
version = "0.1.0"
description = "Complete Python binding for the Rust inquire CLI prompt library"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [{name = "Soumalya Das", email = "geniussantu1983@gmail.com"}]
keywords = ["cli", "prompt", "interactive", "terminal", "tui"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: User Interfaces",
]

[project.urls]
Homepage = "https://github.com/programmersd21/pinq"
Documentation = "https://github.com/programmersd21/pinq"
Repository = "https://github.com/programmersd21/pinq"
